force-app/main/default/objects/Form_Entry_Type__mdt/Form_Entry_Type__mdt.object-meta.xml
<CustomObject>
    <label>Form Entry Type</label>
    <pluralLabel>Form Entry Types</pluralLabel>
</CustomObject>