force-app/main/default/objects/Form_Entry_Type__mdt/fields/Allow_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Allow_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as part of PBI 276358 to move the toggle logic to ACFRCustomDatatableController class from  OmniProviderDatatable LWC</description>
    <inlineHelpText>True if this column should be allowed to be toggled</inlineHelpText>
    <label>Allow Toggle</label>
    <type>Checkbox</type>
</CustomField>