force-app/main/default/objects/Form_Entry_Type__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field is created as per  PBI 276358 for adding Centrally Held to HC Labour Costs and Hours</description>
    <inlineHelpText>Specify the SLI Category to be displayed on the data table</inlineHelpText>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>