force-app/main/default/objects/Form_Entry_Type__mdt/fields/Category_applied__c.field-meta.xml
<CustomField>
    <fullName>Category_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Category applied</label>
    <type>Checkbox</type>
</CustomField>