force-app/main/default/objects/Form_Entry_Type__mdt/fields/Form_Entity_Definition__c.field-meta.xml
<CustomField>
    <fullName>Form_Entity_Definition__c</fullName>
    <label>Form Entity Definition</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Form_Entry_Types</relationshipLabel>
    <relationshipName>Form_Entry_Types</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>