force-app/main/default/objects/Form_Entry_Type__mdt/fields/Form_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Entry_Type__c</fullName>
    <label>Form Entry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question_Response</fullName>
                <default>true</default>
                <label>Question_Response</label>
            </value>
            <value>
                <fullName>GL_Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>