force-app/main/default/objects/Form_Entry_Type__mdt/fields/Service_Region_applied__c.field-meta.xml
<CustomField>
    <fullName>Service_Region_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if the service region has been applied</description>
    <label>Service Region applied</label>
    <type>Checkbox</type>
</CustomField>